--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "webRequest",
     "activeTab",
     "webRequestAuthProvider",
-    "storage",
+    "storage"
   ],
   "host_permissions": ["https://x.com/*"],
   "background": {
